ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: server
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: grpc.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 50051
  # tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpc.dev.local
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  # - secretName: dev-internal
  #   hosts:
  #     - grpc.dev.local
