kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    konghq.com/protocols: "grpc,grpcs"
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
  - http:
    # host: grpc.dev.local
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: grpcbin
            port:
              number: 443
